...
        val rhs = onBackRequested != null
        check(lhs xor rhs)
    }
}

// Test tags for the TopBar navigation elements
const val OpenDrawerTag = "OpenDrawer"
const val NavigateBackTag = "NavigateBack"

@Composable
fun TopBar(
    navigation : NavigationHandlers
) {
...
