...
import battleship.mobile.info.domain.ServerAuthor
import battleship.mobile.info.domain.ServerInfo
import battleship.mobile.ui.NavigationHandlers
import battleship.mobile.ui.TopBar
import battleship.mobile.ui.theme.BattleshipMobileTheme

const val InfoScreenTag = "InfoScreen"

@Composable
fun InfoScreen(
    serverInfo: ServerInfo? = null,
    appInfo: AppInfo,
    onSendEmailRequested: () -> Unit = { },
...
