...
import battleship.mobile.ui.NavigationHandlers
import battleship.mobile.ui.RefreshFab
import battleship.mobile.ui.RefreshingState
import battleship.mobile.ui.TopBar
import battleship.mobile.ui.theme.BattleshipMobileTheme

const val SocialScreenTag = "SocialScreen"

data class SocialScreenState(
    val ranking: List<User> = emptyList(),
    val isLoading: RefreshingState = RefreshingState.Idle
)

...
